fix: correct universitu mapping, fix listings not showing,add university-specific stats

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,6 +182,15 @@ h1 {
   color: #f4c244;
 }
 
+.listing-image {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 11px;
+  margin-bottom: 1.1rem;
+  border: 1px solid #b78807;
+}
+
 .form-buttons {
   grid-column: 1 / -1;
   display: flex;
